--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@aws-sdk/client-ivs": "^3.278.0",
     "express": "^4.18.2",
     "serverless-http": "^3.1.1"
   }
