--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Lambda function to create ivs livestream channels",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=dev & ts-node src/server.ts",
+    "dev": "NODE_ENV=dev && ts-node src/server.ts",
     "build": "tsc --p tsconfig.json",
     "prestart": "tsc --p tsconfig.json",
     "start": "node dist/server.js"
